# picoio

./: LICENSE  README.md
libpicoiomsg/: CMakeLists.txt
libpicoiomsg/include/msg/: MessageIds.hpp  Parser.hpp
libpicoiomsg/include/msg/msg/: Reset.hpp  Sync.hpp
libpicoiomsg/src/: Parser.cpp
picoio-firmware/: CMakeLists.txt  build.sh
picoio-firmware/src/: picoio_bin.cpp
tests/: CMakeLists.txt  build.sh
tests/src/: TestParser.cpp
